--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "react-native-sparkbutton",
   "version": "0.1.0",
@@ -26,5 +25,8 @@
   "peerDependencies": {
     "react": "^16.0.0-alpha.12",
     "react-native": "^0.48.3"
+  },
+  "dependencies": {
+    "prop-types": "^15.6.0"
   }
 }
